# django-kR

./: pyproject.toml
app/: apps.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_board_name.py
app/static/: style.css
app/templates/: base.html  edit.html  index.html  new.html  show.html
event/: admin.py  forms.py  models.py  urls.py  views.py
event/migrations/: 0001_initial.py
event/templates/event/: event_form.css  event_form.html  (+1 more)
myapp/: admin.py  forms.py  models.py  urls.py  views.py
myapp/migrations/: 0001_initial.py
mysite/: pyproject.toml  settings.py  urls.py
mysite/suntory/: apps.py  forms.py  models.py  urls.py  views.py
mysite/suntory/migrations/: 0001_initial.py  0002_main_choice.py  0003_remove_main_choice_main_option1_count_and_more.py  0004_remove_main_option1_count_remove_main_option2_count_and_more.py
mysite/suntory/templates/suntory/: base.html  index.html  list.html  new.html
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
readinglog/: apps.py
sche/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
sche/migrations/: 0001_initial.py  0002_sche_date_alter_sche_description_alter_sche_title.py  0003_alter_sche_date_alter_sche_description_and_more.py
schedulemyapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
schedulemyapp/migrations/: 0001_initial.py  0002_event.py  0003_alter_director_name_alter_log_movie_and_more.py
todo1/: apps.py  urls.py  views.py
todo1/migrations/: 0001_initial.py
todo2/: urls.py  views.py
(+17 files in other folders)
