[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["kaR07L6 <u.rinu.mao0624@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
Django = "^5.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
